# DLRouter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dlrouter/: __init__.py  __main__.py  config.py  constants.py  gunicorn_conf.py  logger.py
dlrouter/api/: __init__.py  app.py  middleware.py
dlrouter/api/routes/: __init__.py  chat.py  completions.py  models.py  nodes.py
dlrouter/backends/: __init__.py  base.py  definition.py  factory.py  http.py  lmdeploy_backend.py  utils.py  vllm_backend.py
dlrouter/backends/dlengine/: __init__.py  backend.py  config.py  definition.py
dlrouter/backends/lmdeploy/: __init__.py  backend.py  config.py  definition.py
dlrouter/backends/nanodeploy/: __init__.py  backend.py  config.py  definition.py
dlrouter/backends/pd/: __init__.py  protocols.py  selection.py  state.py
dlrouter/backends/pd/executors/: __init__.py  dual_dispatch.py  two_stage_transfer.py
dlrouter/backends/sglang/: __init__.py  backend.py  bootstrap.py  config.py  definition.py  dual_dispatch.py  pair_selection.py  transfer.py
dlrouter/backends/vllm/: __init__.py  backend.py  config.py  definition.py  dp_url.py  kv_transfer.py  pair_selection.py  request_id.py  request_state.py  two_stage.py
dlrouter/core/: __init__.py  dp_url.py  health_check.py  node_lifecycle.py  node_manager.py  proxy_engine.py  zmq_discovery.py
dlrouter/core/service_discovery/: __init__.py  base.py  heartbeat_discovery.py  nanoctrl_discovery.py  registry.py  static_discovery.py  zmq_heartbeat.py
dlrouter/models/: __init__.py  node.py  protocol.py
dlrouter/routing/: __init__.py  base.py  consistent_hash.py  factory.py  load_aware.py  prefix_cache.py  random_strategy.py  round_robin.py
dlrouter/utils/: __init__.py  request_key.py
docs/: Infer_readme.md  README.md  heterogeneous-ppu-maca-lmdeploy.md  hybrid-vllm-best-practices.md  infer_readme.md
tests/: __init__.py  test_app_backend_discovery_mode.py  test_app_lmdeploy_distserve_external_registration.py  test_app_vllm_discovery.py  test_cli_backend_loading.py  test_request_key.py  test_routing.py
tests/api/routes/: test_nodes.py
tests/backends/: __init__.py  test_backend_contracts.py  test_backend_definitions.py  test_http_transport.py  test_lmdeploy_backend.py  test_sglang_backend.py  test_sglang_dual_dispatch.py  test_sglang_transfer.py  test_utils.py  test_vllm_backend.py  test_vllm_dp_url.py  test_vllm_kv_transfer.py  test_vllm_pair_selection.py  test_vllm_request_id.py  test_vllm_two_stage.py
tests/backends/pd/: test_dual_dispatch_executor.py  test_pair_selection.py  test_pair_selection_node_manager.py  test_protocols.py  test_public_api.py  test_responses.py  test_state.py  test_two_stage_transfer_executor.py
tests/core/: test_health_check.py  test_nanoctrl_discovery.py  test_node_lifecycle.py  test_node_manager.py  test_proxy_engine.py  test_service_discovery_factory.py  test_service_discovery_registry.py  test_static_discovery.py  test_zmq_discovery.py
tests/routing/: __init__.py  test_prefix_cache.py
