[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlrouter"
version = "0.1.0"
description = "A high-performance router for large language model inference backends"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "shortuuid>=1.0.0",
    "fire>=0.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dlengine = [
    "dlslime>=0.1.16",
]
prod = [
    "gunicorn>=21.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
]

[project.scripts]
dlrouter = "dlrouter.__main__:main"

[tool.setuptools.packages.find]
include = ["dlrouter*"]

# ==================== Ruff ====================
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "T20",  # flake8-print (disallow print statements)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "T20",   # allow print in tests
    "B011",  # allow assert False in tests
]
"dlrouter/gunicorn_conf.py" = [
    "T20",   # allow print in gunicorn config
]
"dlrouter/__main__.py" = [
    "T20",   # allow print in CLI entry point
]

[tool.ruff.lint.isort]
known-first-party = ["dlrouter"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

# ==================== Mypy ====================
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

# Per-module overrides for problematic files
[[tool.mypy.overrides]]
module = [
    "dlrouter.backends.lmdeploy",
    "dlrouter.backends.lmdeploy.*",
    "dlrouter.backends.vllm",
    "dlrouter.backends.vllm.*",
    "dlrouter.backends.factory",
    "dlrouter.core.service_discovery.zmq_heartbeat",
    "dlrouter.core.health_check",
    "dlrouter.core.proxy_engine",
    "dlrouter.core.node_manager",
    "dlrouter.api.*",
    "dlrouter.utils.request_key",
    "dlrouter.routing.factory",
]
ignore_errors = true

# ==================== Pytest ====================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
